[BEAM-1172] - Boolean parameter values are overridden by default values
[BEAM-1171] - NetCDF file not readable if variable name contains '.' or '/'
[BEAM-1156] - SubsetOp does not copy metadata
[BEAM-1125] - Outer scene region is not invalid for certain reprojected products
[BEAM-1067] - Histogram title doesn't update when changing band
[BEAM-961] - GPT shall sort the list of available operators


 _____________________________________________________________________________

 Changes from 4.7.1 to 4.8
_____________________________________________________________________________

1) New BEAM Features

o Readers for SPOT VEGETATION products, Landsat TM products in GeoTIFF format, HDF-EOS products,
  and generic NetCDF/CF-products have been added.

o A writer for generic NetCDF/CF-products has been added.

o The possibility to apply "auto-grouping" in the product tree has been added; that is, product
  nodes whose names begin equally are automatically put into a common group.

o A toolbar button has been added to overlay the world map as a layer on geographic lat/lon projected products.

o The ESA GlobCover Land Cover Map is used as default world map layer now; however, it is still possible to choose the
 NASA Blue Marble as world map layer instead. 

2) Complete list of BEAM 4.8 bug fixes and improvements

New Features
BEAM-1112 - GPF Operator API to provide better support for image filters and convolutions    
BEAM-1114 - GPF Tile API to provide method to directly check sample validity
BEAM-1159 - Auto-group bands according to their names
BEAM-1160 - Auto-grouping of bands shall be controlled by data model
BEAM-1167 - The Landsat reader should support products in GeoTIFF

Improvements
BEAM-1085 - Support reprocessed data by NASA OBPG  
BEAM-1110 - Don't show empty masks for pins and GCPs
BEAM-1115 - Make lookup tables thread safe  
BEAM-1116 - GPF Tile API and API-docs to better express difference between raw and physical samples    