@@ -24,7 +24,8 @@
           [BEAM-1183] Improve reprojection UI usability<br/>
           [BEAM-1180] Allow dragging files into VISAT<br/>
           [BEAM-1177] Index out of bounds for RGB View<br/>
-          [BEAM-1067] Histogram title doesn't update when changing band<br/>        
+          [BEAM-1067] Histogram title doesn't update when changing band<br/>
+          [BEAM-1055] No-data colour option in Colour Manipulation window has no effect<br/>
         </p>
         <p>Changes in 4.8:<br/>
           [BEAM-1169] On KDE (linux) the Java Desktop-API is not supported.<br/>        
